--- a/_sass/_schemes/Mist/_header.scss
+++ b/_sass/_schemes/Mist/_header.scss
@@ -28,7 +28,7 @@
     @include mobile() { display: block; }
   }
 
-  .logo { display: block; }
+  .logo { display: none; }
 
   .site-title {
     font-size: 22px;
